...

  Widget _buildButton(BuildContext context, WidgetRef ref, int totalComments) {
    return Column(
      mainAxisSize: MainAxisSize.min,
      children: [
        Semantics(
          identifier: 'comments_button',
          container: true,
          explicitChildNodes: true,
          button: true,
          label: 'View comments',
          child: IconButton(
            padding: const EdgeInsets.all(8),
...
