appId: co.openvine.app
env:
  USER_EMAIL: automatedmaestrouser@mailinator.com
  USER_PWD: Password01
---
#TC to check that the user can login with a fresh app with email and pwd
#Steps:
# 1. Open the app in clear state: Login screen is displayed
# 2. Tap on "Login with a different account": The Sign in screen is presented
# 3. Input Email and Password, and tap on "Sign In": User is redirected to the Explore screen, New tab

# 1. Open the app in clear state: Login screen is displayed
- launchApp:
    clearState: true
- runFlow: "../asserts/assertSplash.yaml"
- runFlow: "../asserts/assertLogin.yaml"

# 2. Tap on "Login with a different account": The Sign in screen is presented
- tapOn: Login with a different account
- runFlow: "../asserts/assertSignIn.yaml"

# 3. Input Email and Password, and tap on "Log In": User is redirected to the Explore screen, New tab
- tapOn: Email
- inputText: ${USER_EMAIL}
- tapOn: Password
- inputText: ${USER_PWD}
- tapOn:
    text: Sign in
    index: 1
- waitForAnimationToEnd
- runFlow:
    when:
      visible: Save Password?
    commands:
      - tapOn: Not Now
- runFlow: ../asserts/assertExploreNew.yaml
