appId: co.openvine.app
env:
  USER_KEYS: "nsec16fvy70pyfw7cjegt4wry24z4nwaleqanrkwputmy5na0wrdyak4sdkn8l2" #AutomatedTests user
  USER_wKEYS_USERNAME: "AutomatedTests"
---
#TC to check that the user can login
# given that the app is closed
# and user has existing keys.
#Steps:
# 1. Open the app in clear state
# 2. Tap on "Login with a different account": User is directed to the Sign in screen
# 3. Tap on "Import Nostr key": Import your Nostr identity screen is displayed
# 4. Insert an invalid key for the user: Message invalid key is displayed
# 5. Insert a valid key for the user, (optional) dismiss OS message, tap on Import identity:  User is redirected to the Explore screen
# 6. Tap on profile: Validate user name and bio are displayed.

# 1. Open the app in clear state
- launchApp:
    clearState: true
- runFlow: "../asserts/assertSplash.yaml"

# 2. Tap on "Login with a different account": User is directed to the Sign in screen
- tapOn: Login with a different account
- runFlow: ../asserts/assertSignIn.yaml

# 3. Tap on "Import Nostr key": Import your Nostr identity screen is displayed
- tapOn: Import Nostr key
- runFlow: "../asserts/assertImportNostrIdentity.yaml"

# 4. Insert an invalid key for the user: Message invalid key is displayed
- tapOn: Private key or bunker URL
- inputText: "sec16fvy70pyfw7cjegt4wry24z4nwaleqanrkwputmy5na0wrdyak4sdkn8l2"
- tapOn: Import Nostr key
- assertVisible: Invalid format. Use nsec..., hex, or bunker://...
- eraseText: 64

# 5. Insert a valid key for the user, (optional) dismiss OS message, tap on Import identity: User is redirected to the home screen
- inputText: "${USER_KEYS}"
#Dissmiss OS message Continue and Done on the displayed keypad
- tapOn:
    text: "Continue"
    optional: true
- runFlow: ../utils/hideKeyboard.yaml
#Import keys
- tapOn: Import Nostr key
#User is taken to the Explore screen, validate it:
- tapOn:
    id: explore_tab
- runFlow: ../asserts/assertExploreNew.yaml

# 5. Tap on profile: Validate user name and bio are displayed.
- tapOn:
    id: profile_tab
- runFlow: "../asserts/assertSpecificUserProfile.yaml"
